# unnatural-planets

./: .gitmodules  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  naivePlan.md
.github/workflows/: tests.yml
doodads/ores/: aether.doodad  aether_1.doodad  coal.doodad  copper.doodad  crude-oil.doodad  crystals.doodad  crystals_1.doodad  crystals_2.doodad  gas.doodad  gems.doodad  gold.doodad  iron.doodad  lead.doodad  metal.doodad  metal_1.doodad  metal_2.doodad  metal_3.doodad  metal_4.doodad  oil.doodad  oil_1.doodad  oil_2.doodad  uranium.doodad
doodads/trees/: 0.doodad  1.doodad  10.doodad  11.doodad  12.doodad  13.doodad  14.doodad  15.doodad  16.doodad  17.doodad  18.doodad  19.doodad  2.doodad  20.doodad  21.doodad  22.doodad  23.doodad  24.doodad  25.doodad  26.doodad  27.doodad  28.doodad  29.doodad  3.doodad  30.doodad  31.doodad  32.doodad  33.doodad  34.doodad  35.doodad  36.doodad  37.doodad  38.doodad  39.doodad  4.doodad  40.doodad  41.doodad  42.doodad  43.doodad  44.doodad  (+28 more)
doodads/vegetation/: plant_1.doodad  plant_2.doodad  plant_3.doodad  plant_4.doodad  plant_5.doodad  plant_6.doodad  tree_1.doodad  tree_2.doodad  tree_3.doodad  tree_4.doodad
sources/: baseMesh.cpp  coloringModes.cpp  common.h  doodads.cpp  doodads.h  elevationModes.cpp  enums.cpp  functions.cpp  functions.h  generateBaseMesh.cpp  generateDoodads.cpp  generateMaterials.cpp  generateTileProperties.cpp  generator.cpp  generator.h  graph.cpp  main.cpp  main.h  marching.cpp  math.cpp  math.h  mesh.cpp  mesh.h  meshGeneration.cpp  meshOperations.cpp  meshSaving.cpp  meshSimplify.cpp  meshSplit.cpp  meshUnwrap.cpp  modesConfiguration.cpp  names.cpp  planets.h  sdf.cpp  sdf.h  shape.cpp  startingPositions.cpp  statistics.cpp  terrain.cpp  terrain.h  terrainDensity.cpp  (+14 more)
